--- a/src/app/components/basic-components/social-link/social-link.component.scss
+++ b/src/app/components/basic-components/social-link/social-link.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 a {
-  border-bottom: 1px solid var(--lines);
+  border-bottom: 1px solid var(--preview-lines);
   color: #fff;
   font-family: Roboto Mono, sans-serif;
   font-size: 1rem;
@@ -22,7 +22,7 @@ a {
   font-size: .75rem;
 
   &.white-heading-highlight {
-    font-family: var(--secondary-font), sans-serif;
-    font-size: var(--standard-subheading);
+    font-family: var(--preview-secondary-font), sans-serif;
+    font-size: var(--preview-standard-subheading);
   }
 }
