--- a/src/app/components/pages-components/about-experience-cell/about-experience-cell.component.html
+++ b/src/app/components/pages-components/about-experience-cell/about-experience-cell.component.html
@@ -1,35 +1,35 @@
-<div class="about-block-info">
-<!--  <h2 class="about-cell-name-two">Experiences</h2>-->
-<!--  <div class="experience-cell" *ngFor="let experience of experiences">-->
-<!--    <div class="experience-intro-info">-->
-<!--      <img-->
-<!--        class="experience-intro-image"-->
-<!--        [src]="careersStaticStorageLink + experience.companyPicture"-->
-<!--        [alt]="experience.companyName"-->
-<!--      >-->
-<!--      <div class="experience-intro-info-desc">-->
-<!--        <h4>{{ experience.companyName }}</h4>-->
-<!--        <p class="experience-intro-info-dates">-->
-<!--          {{ dayjs(experience.startDate).format('MMMM D, YYYY') }} - {{ dayjs(experience.endDate).format('MMMM D, YYYY') }}-->
-<!--        </p>-->
-<!--        <p>{{ experience.companyDescription }}</p>-->
-<!--        <basic-social-link-->
-<!--          [link]="experience.companyLink"-->
-<!--          [title]="experience.companyLinkTitle"-->
-<!--        />-->
-<!--      </div>-->
-<!--    </div>-->
+<div class="preview-about-block-info">
+  <h2 class="preview-about-cell-name-two">Experiences</h2>
+  <div class="preview-experience-cell" *ngFor="let experience of experiences">
+    <div class="preview-experience-intro-info">
+      <img
+        class="preview-experience-intro-image"
+        [src]="careersStaticStorageLink + experience.companyPicture"
+        [alt]="experience.companyName"
+      >
+      <div class="preview-experience-intro-info-desc">
+        <h4 class="preview-h4">{{ experience.companyName }}</h4>
+        <p class="preview-paragraph preview-experience-intro-info-dates">
+          {{ dayjs(experience.startDate).format('MMMM D, YYYY') }} - {{ dayjs(experience.endDate).format('MMMM D, YYYY') }}
+        </p>
+        <p class="preview-paragraph">{{ experience.companyDescription }}</p>
+        <basic-social-link
+          [link]="experience.companyLink"
+          [title]="experience.companyLinkTitle"
+        />
+      </div>
+    </div>
 
-<!--    <div class="experience-position" *ngFor="let position of experience.companyPositions">-->
-<!--      <p class="eyebrow">-->
-<!--        <strong class="bold-text-6">-->
-<!--          <em class="italic-text-2">{{ position.positionTitle }}</em>-->
-<!--        </strong>-->
-<!--      </p>-->
-<!--      <p class="experience-intro-info-dates">-->
-<!--        {{ dayjs(position.positionStartDate).format('MMMM D, YYYY') }} - {{ dayjs(position.positionEndDate).format('MMMM D, YYYY') }}-->
-<!--      </p>-->
-<!--      <p>{{ position.positionDescription }}</p>-->
-<!--    </div>-->
-<!--  </div>-->
+    <div class="preview-experience-position" *ngFor="let position of experience.experiencePositions">
+      <p class="preview-paragraph preview-eyebrow">
+        <strong class="preview-bold-text-6">
+          <em class="preview-italic-text-2">{{ position.positionTitle }}</em>
+        </strong>
+      </p>
+      <p class="preview-paragraph preview-experience-intro-info-dates">
+        {{ dayjs(position.positionStartDate).format('MMMM D, YYYY') }} - {{ dayjs(position.positionEndDate).format('MMMM D, YYYY') }}
+      </p>
+      <p class="preview-paragraph">{{ position.positionDescription }}</p>
+    </div>
+  </div>
 </div>
