--- a/src/app/pages/dashboard/experience/experience.component.html
+++ b/src/app/pages/dashboard/experience/experience.component.html
@@ -1,6 +1,7 @@
 <layout-default
   [userInfo]="userInfo"
   [showFooter]="false"
+  [withPreview]="true"
 >
   <ng-container *transloco="let t">
     <div *ngIf="experience">
