--- a/src/app/pages/dashboard/author/author.component.html
+++ b/src/app/pages/dashboard/author/author.component.html
@@ -1,6 +1,7 @@
 <layout-default
   [userInfo]="userInfo"
   [showFooter]="false"
+  [withPreview]="true"
 >
   <ng-container *transloco="let t">
     <div *ngIf="author">
@@ -31,11 +32,12 @@
         <div *ngIf="!authorEditMode">
           <h1>{{ author.firstName }} {{ author.lastName }}</h1>
           <p>{{ author.description }}</p>
-          <basic-link
-            *ngFor="let authorSocial of author.socials"
-            [label]="authorSocial.title"
-            [href]="authorSocial.link"
-          />
+          <div *ngFor="let authorSocial of author.socials">
+            <basic-link
+              [label]="authorSocial.title"
+              [href]="authorSocial.link"
+            />
+          </div>
           <p class="author-date">{{ t('authors.authorCreatedAt', { authorCreatedAt: dayjs(authorCreatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
           <p class="author-date">{{ t('authors.authorUpdatedAt', { authorUpdatedAt: dayjs(authorUpdatedAt).format('YYYY/MM/DD HH:mm:ss') }) }}</p>
 
