author selection fix

--- a/src/app/pages/credentials/recover-account/recover-account.component.html
+++ b/src/app/pages/credentials/recover-account/recover-account.component.html
@@ -86,7 +86,7 @@
         <input
           type="file"
           accept="text/*"
-          (change)="selectFile($event)"
+          (change)="selectRecoveryKeys($event)"
           #uploadKeys
           hidden
         />
