--- a/src/app/pages/dashboard/create-article/create-article.component.html
+++ b/src/app/pages/dashboard/create-article/create-article.component.html
@@ -86,7 +86,7 @@
       <input
         type="file"
         accept="image/*"
-        (change)="selectFile($event)"
+        (change)="selectArticlePicture($event)"
         #fileInput
         hidden
       />
