--- a/src/app/pages/dashboard/article/article.component.html
+++ b/src/app/pages/dashboard/article/article.component.html
@@ -106,7 +106,7 @@
         <input
           type="file"
           accept="image/*"
-          (change)="selectFile($event)"
+          (change)="selectArticlePicture($event)"
           #fileInput
           hidden
         />
