--- a/src/app/pages/dashboard/create-certification/create-certification.component.html
+++ b/src/app/pages/dashboard/create-certification/create-certification.component.html
@@ -5,19 +5,43 @@
     <div class="create-certification-wrapper">
       <h1>{{ t('certs.createCertTitle') }}</h1>
 
+      <div class="language-selection-buttons">
+        <div class="language-selection-button">
+          <basic-button
+            [label]="'PL'"
+            [fillButton]="certLanguage === 'PL'"
+            (buttonClick)="changeCertLanguage('PL')"
+          />
+        </div>
+        <div class="language-selection-button margin">
+          <basic-button
+            [label]="'EN'"
+            [fillButton]="certLanguage === 'EN'"
+            (buttonClick)="changeCertLanguage('EN')"
+          />
+        </div>
+        <div class="language-selection-button">
+          <basic-button
+            [label]="'RU'"
+            [fillButton]="certLanguage === 'RU'"
+            (buttonClick)="changeCertLanguage('RU')"
+          />
+        </div>
+      </div>
+
       <basic-input
         [label]="t('input.certNameLabel')"
         [placeholder]="t('input.certNamePlaceholder')"
         [inputDescription]="t('input.certNameDesc')"
         [value]="certName"
-        (valueChange)="certName = $event"
+        (valueChange)="modifyCertName($event)"
       />
       <basic-input
         [label]="t('input.certDescLabel')"
         [placeholder]="t('input.certDescPlaceholder')"
         [inputDescription]="t('input.certDescDesc')"
         [value]="certDescription"
-        (valueChange)="certDescription = $event"
+        (valueChange)="modifyCertDescription($event)"
       />
       <basic-input
         [label]="t('input.certObtainedSkillLabel')"
@@ -29,7 +53,7 @@
       />
 
       <div *ngIf="certObtainedSkills.length > 0" class="cert-skills-wrapper">
-        <div *ngFor="let skill of certObtainedSkills">
+        <div *ngFor="let skill of getCertSkills()">
           <p class="cert-skill" (click)="deleteObtainedSkill(skill)">{{ skill }}</p>
         </div>
       </div>
@@ -42,7 +66,7 @@
             [placeholder]="t('input.certObtainingDatePlaceholder')"
             [inputDescription]="t('input.certObtainingDateDesc')"
             [value]="obtainingDate"
-            (valueChange)="obtainingDate = $event"
+            (valueChange)="modifyCertObtainingDate($event)"
           />
         </div>
         <div class="margin-left">
@@ -52,7 +76,7 @@
             [placeholder]="t('input.certExpirationDatePlaceholder')"
             [inputDescription]="t('input.certExpirationDateDesc')"
             [value]="expirationDate"
-            (valueChange)="expirationDate = $event"
+            (valueChange)="modifyCertExpirationDate($event)"
           />
         </div>
       </div>
@@ -61,7 +85,7 @@
         [label]="t('input.authorQueryLabel')"
         [placeholder]="t('input.authorQueryPlaceholder')"
         [inputDescription]="t('input.authorQueryDesc')"
-        [value]="authorSearchQuery"
+        [value]="getAuthorName()"
         (valueChange)="handleAuthorQuery($event)"
       />
 
@@ -89,9 +113,26 @@
         />
       </div>
 
+      <input
+        type="file"
+        accept="image/*"
+        (change)="selectCertificationPicture($event)"
+        #fileInput
+        hidden
+      />
+
       <basic-button
         [label]="t('button.selectCertificationFile')"
         (click)="certificatePdf.click()"
+      />
+
+      <input
+        id="certificatePdf"
+        type="file"
+        accept=".pdf,.doc,.docx"
+        (change)="selectCertificationDocument($event)"
+        #certificatePdf
+        hidden
       />
 
       <div class="cert-doc-preview" *ngIf="certificationDocument && certDocsFileInfo">
@@ -111,23 +152,6 @@
           />
         </div>
       </div>
-
-      <input
-        id="certificatePdf"
-        type="file"
-        accept=".pdf,.doc,.docx"
-        (change)="selectCertificationDocument($event)"
-        #certificatePdf
-        hidden
-      />
-
-      <input
-        type="file"
-        accept="image/*"
-        (change)="selectCertificationPicture($event)"
-        #fileInput
-        hidden
-      />
 
       <div class="create-button-wrapper">
         <basic-button
